[package]
name = "zen"
version = "0.1.3"
edition = "2024"
authors = ["Shaheem <shaheem.mpm@gmail.com>"]
description = "A minimal CLI tool built with RUST to keep your repos clean and peaceful 🧘"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20.2"
indicatif = "0.18.0"
walkdir = "2.5.0"
